[metadata]
name = bjontegaard
version = attr: bjontegaard.__version__
author = bjontegaard contributors
author_email = christian.herglotz@fau.de
description = Calculate the Bjonteegard-Delta metric with different interpolation methods
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FAU-LMS/bjontegaard
project_urls =
    Bug Tracker = https://github.com/FAU-LMS/bjontegaard/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers

[options]
packages = bjontegaard
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
